--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -104,7 +104,7 @@
     <h3>Requisitos para Estar em 4NF</h3>
 
     <ul class="text-ul">
-      <li>A tabela já deve estar na <strong>BNFC</strong></li>
+      <li>A tabela já deve estar na <strong>BCNF</strong></li>
       <li>Não pode haver dependências multivaloradas, a menos que sejam totalmente determinadas pela chave primária.
       </li>
     </ul>
