--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -27,20 +27,14 @@
   <div class="main">
     <div class="text-layer">
       <h1>Normalização de Tabela: NF4</h1>
-      <p>
-        O NF4 (Forma Normal 4) é um nível avançado de normalização
-        que tem o objetivo de eliminar dependências multivaloradas
-        em uma tabela. As dependências multivaloradas ocorrem quando
-        um atributo de uma tabela depende de uma chave primária,
-        mas sem relação direta com outros atributos presentes.
-        Esse tipo de dependência é mais comum em bancos de dados complexos,
-        onde uma entidade pode ter múltiplos valores para um único atributo
-        sem influenciar outros valores.<br><br>
-        Para que uma tabela esteja na 4ª Forma Normal:
-
-        Ela deve atender aos requisitos da 3ª Forma Normal (NF3), ou seja, não ter dependências transitivas.
-        Deve eliminar dependências multivaloradas, garantindo que cada atributo dependa exclusivamente da chave
-        primária.
+      <p style="font-size: 20px; margin-top: 2%;">
+        A 4ª Forma Normal (4NF) 
+        é um passo avançado na 
+        normalização de dados em bancos de dados relacionais. 
+        Ela visa eliminar dependências multivaloradas,
+         um tipo de redundância que pode aparecer quando uma 
+         tabela contém atributos independentes que não têm relação direta entre si, 
+         mas compartilham a mesma chave.
       </p>
 
     </div>
@@ -51,97 +45,79 @@
   </div>
   <div class="mod-content">
 
-    <h2>Exemplo de Dependência Multivalorada</h2>
+    <h2>Definição e Regras da 4ª Forma Normal</h2>
 
-    <p><strong>IMAGINE</strong> uma tabela de "Carros"
-      com os seguintes atributos:
-      Modelo, Ano, Cor.
-      Se um modelo de carro pode ser de vários anos e ter várias cores,
-      há uma dependência multivalorada entre o ano e cor.
-      para resolver isso na NF4, devemos separar essas dependências
-      em tabelas distintas, como Ano_Carro e Cor_Carro,
-      onde cada uma é lida com as múltiplas relações.</p>
-    <img src="modelagem-de-dados-dependencia-multivalorada.jpg">
-
-    <!-- Neste exemplo, maf_year e color são independentes um do outro, mas dependem 
-       de car_model. Neste exemplo, 
-       essas duas colunas são consideradas multivalores dependentes de car_model.-->
-
-    <h2>Passos para implementar a NF4</h2>
+    <p>Uma tabela está na 4ª Forma Normal (4NF) se:
+</p>
     <ul class="text-ul">
-      <li><strong>dependências</strong> multivaloradas em tabelas que atendem à NF3.</li>
-
-      <li><strong>Separar as dependências</strong> em tabelas independentes, onde cada valor multivalorado
-        pode ser representado individualmente.</li>
-
-      <li> <strong>Associar a cada nova tabela</strong> com a chave primária da tabela original,
-        permitindo que cada dependência seja representada sem afetar outros atributos.</li>
-    </ul>
-    <p>Essa forma normal é menos comum em muitos sistemas, mas é essencial em bases de dados onde a
-      integridade e a precisão dos dados em múltiplas relações são cruciais.</p>
-    <img src="divisão-nf4.png">
-    <img src="divisão-nf4-2.png">
-    <p>
-      O nível de normalização NF4, ou Quarta Forma Normal (4NF),
-      vai além dos conceitos de 3NF e BCNF (Forma Normal de Boyce-Codd).
-      Esse nível de normalização lida especificamente
-      com dependências multivaloradas para evitar redundâncias ainda mais complexas nas tabelas.</p>
+      <li>Ela já está na <strong>3ª Forma Normal (3NF)</strong> e, 
+    frequentemente, na <strong>Forma Normal de Boyce-Codd (BCNF)</strong> , 
+    o que significa que não há dependências funcionais transitivas.</li>
+    <li>Ela <strong>não possui dependências multivaloradas</strong> não triviais, 
+    ou seja, se um atributo depende da chave primária e possui valores múltiplos, 
+    ele não deve coexistir com outro atributo multivalorado na mesma tabela, 
+    a menos que esses valores dependam diretamente uns dos outros.</li></ul>
 
 
-    <h2>Conceitos-chave da Quarta Forma Normal (4NF)
-    </h2>
-    <h3>Dependência Multivalorada</h3>
 
+    <h2>Exemplo Prático: Tabela de Alunos-Cursos (não normalizada)</h2> 
+  <p>Imagine uma tabela de "Inscrições" em que cada aluno pode estar
+  inscrito em múltiplos cursos e ter múltiplos hobbies. 
+  Nessa estrutura, há duas informações 
+  multivaloradas independentes – cursos e hobbies – que podem gerar redundância.</p>
+    <img src="Nf4-nãonormalizada.png">
+   <p><Strong>Problema de Dependência Multivalorada</Strong></p> 
+    <p>Na tabela acima:</p>
+    <ul class="text-ul"><li><Strong>AlunoID</Strong> está relacionado tanto a múltiplos cursos quanto a múltiplos hobbies, 
+      o que resulta em uma <strong>dependência multivalorada</strong>. Cursos e hobbies são independentes entre si, mas 
+      compartilham o mesmo identificador de chave, o que leva à repetição e aumento do volume de dados.</li></ul>
+
+      <h2>Aplicando a 4NF</h2>
+<p>Para resolver essa redundância e aplicar a 4NF,
+dividimos a tabela em duas tabelas separadas,
+ cada uma armazenando uma dependência multivalorada única.Isso resulta nas seguintes tabelas: </p>
+ <p><strong>1. Tabela: Inscrições em Cursos</strong></p>
+
+
+<p>Relaciona os alunos aos cursos nos quais estão inscritos, sem incluir hobbies.</p>
+<img src="nf4-image1.png" alt="">
+
+<p><strong>2. Tabela: Hobbies dos Alunos</strong></p>
+<p>Relaciona os alunos aos hobbies que possuem, sem incluir informações sobre cursos.</p>
+<img src="nf4-image2.png" alt="">
+
+
+    <h2>Explicação da Aplicação da 4NF</h2>
+    <p>Após dividir as informações,
+       cada tabela agora armazena apenas uma <Strong>dependência multivalorada:</Strong></p>
     <ul class="text-ul">
-      <li>Uma dependência multivalorada ocorre quando, em uma tabela,
-        um atributo depende de um conjunto de valores independentes de outro atributo,
-        além da chave primária.</li>
-      <li>Exemplo: Em uma tabela de pedidos com os atributos <strong>produto</strong> e <strong>Fornecedor</strong>,
-        cada produto pode vir de vários fornecedores e cada fornecedor
-        pode fornecer vários produtos. Isso cria múltiplas combinações,
-        levando a uma dependência multivalorada.</li>
-    </ul>
-    <h3>Requisitos para Estar em 4NF</h3>
+      <li><strong>inscrições em Cursos: </strong>A tabela registra quais alunos estão inscritos em quais cursos, 
+        eliminando qualquer redundância relacionada a hobbies.</li>
 
-    <ul class="text-ul">
-      <li>A tabela já deve estar na <strong>BCNF</strong></li>
-      <li>Não pode haver dependências multivaloradas, a menos que sejam totalmente determinadas pela chave primária.
-      </li>
-    </ul>
-    <h3>Como Remover Dependências Multivaloradas</h3>
-
-    <ul class="text-ul">
-      <li>Dividir a tabela original em duas tabelas separadas
-        para eliminar a dependência multivalorada. Cada nova tabela conterá apenas uma dependência,
-        de modo que as relações sejam simplificadas e redundâncias evitadas.</li>
+      <li><strong>Hobbies dos Alunos:</strong> 
+         A tabela registra os hobbies de cada aluno, sem informações duplicadas sobre os cursos.</li>
     </ul>
 
-
-    <h2>Exemplo Prático para o 4NF</h2>
-    <p>Imagine uma tabela chamada Estudante_Curso_Hobby que contém:</p>
-
+    <p>Cada tabela agora cumpre os requisitos da 4ª Forma Normal:</p>
     <ul class="text-ul">
-      <li><strong>EstudanteID</strong></li>
-      <li><strong>Curso</strong></li>
-      <li><Strong>Hobby</Strong></li>
-    </ul>
-    <p>Se cada estudante pode estar inscrito em vários cursos e ter vários hobbies,
-      mas os hobbies e cursos são independentes entre si, essa situação requer divisão:</p>
+      <li>Está na <strong>3ª Forma Normal (3NF)</strong> e, geralmente,na <strong>Forma Normal de Boyce-Codd (BCNF)</strong> .</li>
 
+    <li>Não possui <strong>dependências multivaloradas </strong> 
+      independentes na mesma tabela, garantindo a integridade dos dados.</li></ul>
+  </ul>
+    
+
+    <h2>Benefícios da 4ª Forma Normal</h2>
+    <p>Aplicar a 4ª Forma Normal traz várias vantagens:</p>
     <ul class="text-ul">
-      <li>Tabela <strong>Estudante_Curso</strong> com <strong>EstudanteID</strong> e <strong>Curso</strong>.</li>
-      <li>Tabela <strong>Estudante_Hobby</strong> com <strong>EstudanteID</strong> e <strong>Hobby</strong>.</li>
-    </ul>
-    <p>Essas divisões garantem que cada relação seja única e eliminam redundâncias desnecessárias, cumprindo o 4NF.</p>
-
-
-
-    <h2>Benefícios do 4NF</h2>
-    <ul class="text-ul">
-      <li>Redução de <strong>dados redundantes</strong> e <strong>inconsistências</strong>.</li>
-      <li><strong>Otimização do espaço</strong> em armazenamento.</li>
-      <li>Melhoria na <strong>manutenção</strong> dos dados, pois menos atualizações são necessárias para manter a
-        integridade.</li>
+      <li><strong>Eliminação de Redundâncias:</strong> Cursos e hobbies não são duplicados, 
+        o que reduz o espaço de armazenamento e evita inconsistências.</li>
+      <li><strong>Eficiência na Atualização:</strong>
+        Alterações em hobbies ou cursos ocorrem em um único lugar, sem necessidade de repetir dados.</li>
+      <li><strong>Consulta e Integração de Dados Mais Simples: </strong>Dividir dependências 
+        multivaloradas em tabelas separadas facilita o acesso e uso dos dados sem redundância.</li>
+        <li><strong>Redução de Anomalias de Inserção e Exclusão:</strong> Garantir que cada tabela tenha apenas uma dependência multivalorada evita problemas
+           ao inserir ou excluir dados, como a necessidade de registros vazios para hobbies ou cursos.</li>
     </ul><br><br>
     <img src="Formas-normais-8.png" height="350px" alt="">
     <p>Embora a NF4 seja um <strong>Nível avançado</strong> de normalização,
