--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
         <p>Sobre nós</p></a>
         <a class="link" target="_blank" href="https://www.jorgestreet.com.br/">
           <p>Nossa escola</p></a>
-          <a class="link" target="_blank" href="index.html">
+          <a class="link" target="_blank" href="https://www.jorgestreet.com.br/cursos/mtec-desenvolvimento-de-sistemas/">
             <p>Nosso Curso</p></a>
     </div>
 <div class="button-content2">
