--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
       <a class="link" href="about.html">
         <li>Sobre</li>
       </a>
-      <a class="link" href="auth/login.html">
+      <a class="link" href="coming-soon.html">
         <li>Entrar</li>
       </a>
     </ul>
