troquei a tag iframe pra video, e add minha imagem

--- a/app/modules/nf1.html
+++ b/app/modules/nf1.html
@@ -44,8 +44,8 @@
       </p>
     </div>
     <div class="video">
-      <iframe src="../modules/Video_Modulo1.mp4" height="262px" width="465px">
-      </iframe>
+    <video src="/app/modules/Video_Modulo1.mp4" height="262px" width="465px" controls></video>
+    <!-- height="262px" width="465px"-->
     </div>
   </div>
   <div class="mod-content">
@@ -114,7 +114,7 @@
 
       <center>
         
-        <iframe src="../modules/Imagem2-Modulo_1.jpg.png" height="243px" width="634px">
+        <iframe src="../modules/Imagem2-Modulo_1.png" height="243px" width="634px">
         </iframe></center>
         
         <h6>Tabela 2 - ID_Cli, Nome_Adicional_Cli, CEP_Extra, CPF_Extra e Tel_Extra (PNG).</h6>
