--- a/app/modules/nf2.html
+++ b/app/modules/nf2.html
@@ -32,8 +32,8 @@
       </p>
     </div>
     <div class="video">
-      <iframe src="../modules/video2nf.mp4" height="262px" width="465px">
-      </iframe>
+      <video src="/app/modules/testedevideo.mp4" controls height="262px" width="465px"></video>
+      <!-- height="262px" width="465px" -->
     </div>
   </div>
   <div class="mod-content">
