--- a/app/modules/nf3.html
+++ b/app/modules/nf3.html
@@ -38,8 +38,7 @@
       </p>
     </div>
     <div class="video">
-      <iframe src="../modules/testedevideo.mp4" height="262px" width="465px">
-      </iframe>
+      <video src="/app/modules/testedevideo.mp4" controls height="262px" width="465px"></video>
     </div>
   </div>
   <div class="mod-content">
