--- a/app/modules/nfbc.html
+++ b/app/modules/nfbc.html
@@ -44,8 +44,7 @@
       </p>
     </div>
     <div class="video">
-      <iframe src="../modules/Video_ModuloBC.mp4" height="262px" width="465px">
-      </iframe>
+      <video src="/app/modules/Video_ModuloBC.mp4" controls height="262px" width="465px"></video>
     </div>
   </div>
   <div class="mod-content">
