--- a/app/about.html
+++ b/app/about.html
@@ -28,7 +28,10 @@
     <div class="text-layer">
       <h1>Nosso Projeto</h1>
       <p>
-        
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis soluta, laboriosam culpa esse quae incidunt temporibus omnis officiis sapiente. Placeat eius blanditiis repudiandae iure dolorum ducimus, aperiam at doloribus mollitia!
+        Voluptate, veniam ut vel corrupti harum a quisquam nihil aspernatur rem, omnis in quis soluta, mollitia magnam repudiandae velit. Sed quas eos voluptas sapiente hic totam quia doloremque incidunt sint.
+        Repellendus ipsum tenetur modi vitae? Aut numquam quam dolor obcaecati, odit excepturi consequatur placeat iusto quo facilis eveniet ullam adipisci iure aliquid sed sit voluptate et perspiciatis assumenda dolores error.
+        Eveniet illum odit dolor repellat laboriosam explicabo alias, consectetur corporis facilis debitis repellendus ipsum et provident itaque voluptas doloribus modi vel reiciendis dolores sint fuga? Sequi saepe id alias quae?
       </p>
     </div>
     <div class="img-layer">
@@ -44,7 +47,7 @@
         <p>Augusto Conti</p>
       </section>
       <section class="even">
-        <img src="../content/augusto.jpeg" class="person" alt="">
+        <img src="../content/acho q essa aq vai servir.png" class="person" alt="">
         <p>Eduardo Sim</p>
       </section>
       <section class="odd">
