Subindo o site na web

--- a/app/about.html
+++ b/app/about.html
@@ -43,23 +43,23 @@
     <h1 id="mod-title">Participantes</h1>
     <div class="about">
       <section class="odd">
-        <img src="../content/augusto.jpeg" class="person" alt="">
+        <img src="../app/content/augusto.jpeg" class="person" alt="">
         <p>Augusto Conti</p>
       </section>
       <section class="even">
-        <img src="../content/acho q essa aq vai servir.png" class="person" alt="">
+        <img src="../app/content/acho q essa aq vai servir.png" class="person" alt="">
         <p>Eduardo Sim</p>
       </section>
       <section class="odd">
-        <img src="../content/augusto.jpeg" class="person" alt="">
+        <img src="../app/content/augusto.jpeg" class="person" alt="">
         <p>Guilherme Wendel</p>
       </section>
       <section class="even">
-        <img src="../content/augusto.jpeg" class="person" alt="">
+        <img src="../app/content/augusto.jpeg" class="person" alt="">
         <p>Enzo Schiavo</p>
       </section>
       <section class="odd">
-        <img src="../content/giovanni.jpeg" class="person" alt="">
+        <img src="../app/content/giovanni.jpeg" class="person" alt="">
         <p>Giovanni Toccoli</p>
       </section>
 
@@ -85,9 +85,9 @@
     <div class="button-content2">
       <p><strong>Projeto</strong></p>
       <p>github</p> <a href="https://github.com/ContiAugusto/database-course" target="_blank"><img
-          src="..\content\github.png" id="image2" /></a>
+          src="..\app\content\github.png" id="image2" /></a>
       <p>linkedin</p> <a href="https://www.linkedin.com/in/augusto-conti-b8821432a" target="_blank"><img
-          src="..\content\linkedin.png" id="image2" /></a>
+          src="..\app\content\linkedin.png" id="image2" /></a>
 
 
     </div>
