--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="img-layer">
-      <img src="../content/celulas-da-tabela.png" id="image-layer" />
+      <img src="../app/content/celulas-da-tabela.png" id="image-layer" />
 
     </div>
   </div>
@@ -77,42 +77,42 @@
     <div class="module">
 
       <section class="module-content">
-        <img src="../content/ciencia-da-computacao.png" id="image1" />
+        <img src="../app/content/ciencia-da-computacao.png" id="image1" />
         <a class="link2" href="modules/nf1.html">
           <p>NF1--Garante que todos os atributos das tabelas contenham valores atômicos
             (não divisíveis) e que cada entrada da tabela seja única.</p>
         </a>
       </section>
       <section class="module-content">
-        <img src="../content/computador-portatil.png" id="image1" />
+        <img src="../app/content/computador-portatil.png" id="image1" />
         <a class="link2" href="modules/nf2.html">
           <p>NF2--Exige que a tabela esteja em NF1 e, além disso,
             que todos os atributos que não são chaves dependam totalmente da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
-        <img src="../content/gerenciamento-de-informacoes.png" id="image1" />
+        <img src="../app/content/gerenciamento-de-informacoes.png" id="image1" />
         <a class="link2" href="modules/nf3.html">
           <p>NF3--Requer que a tabela esteja em NF2 e que os atributos não-chaves sejam independentes
             uns dos outros, ou seja, sem dependências transitivas.</p>
         </a>
       </section>
       <section class="module-content">
-        <img src="../content/transformacao.png" id="image1" />
+        <img src="../app/content/transformacao.png" id="image1" />
         <a class="link2" href="modules/nfbc.html">
           <p>BCNF--Uma versão mais rigorosa da NF3, que resolve algumas exceções,
             garantindo que toda dependência funcional seja direta da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
-        <img src="../content/tecnologia.png" id="image1" />
+        <img src="../app/content/tecnologia.png" id="image1" />
         <a class="link2" href="modules/nf4.html">
           <p>NF4--Além das exigências da NF3, a NF4 elimina dependências multivaloradas,
             onde um atributo pode ter múltiplos valores que dependem da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
-        <img src="../content/tecnologia (1).png" id="image1" />
+        <img src="../app/content/tecnologia (1).png" id="image1" />
         <a class="link2" href="modules/nf5.html">
           <p>NF5--Também conhecida como 5NF, elimina dependências de junção,
             assegurando que os dados sejam decompostos o máximo possível sem perda de informações.</p>
@@ -135,8 +135,8 @@
     </div>
 <div class="button-content2">
   <p><strong>Projeto</strong></p>
-  <p>github</p> <a href="https://github.com/ContiAugusto/database-course" target="_blank"><img src="..\content\github.png" id="image2" /></a>
-  <p>linkedin</p> <a href="https://www.linkedin.com/in/augusto-conti-b8821432a" target="_blank"><img src="..\content\linkedin.png" id="image2" /></a>
+  <p>github</p> <a href="https://github.com/ContiAugusto/database-course" target="_blank"><img src="..\app\content\github.png" id="image2" /></a>
+  <p>linkedin</p> <a href="https://www.linkedin.com/in/augusto-conti-b8821432a" target="_blank"><img src="..\app\content\linkedin.png" id="image2" /></a>
 
   
 </div>
