--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -39,7 +39,7 @@
 
     </div>
     <div class="video">
-      <video src="/app/modules/Video_Modulo4.mp4" controls height="262px" width="465px"></video>
+      <video src="Video_Modulo4.mp4" controls height="262px" width="465px"></video>
     </div>
   </div>
   <div class="mod-content">
