--- a/app/modules/nf1.html
+++ b/app/modules/nf1.html
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="video">
-    <video src="Video_Modulo1.mp4" height="262px" width="465px" controls></video>
+    <iframe src="Video_Modulo1.mp4" height="262px" width="465px" controls></iframe>
     <!-- height="262px" width="465px"-->
     </div>
   </div>
