--- a/app/modules/nf3.html
+++ b/app/modules/nf3.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="video">
-      <video src="Video_Modulo3.mp4" controls height="262px" width="465px"></video>
+      <iframe src="Video_Modulo3.mp4" controls height="262px" width="465px"></iframe>
     </div>
   </div>
   <div class="mod-content">
