--- a/app/modules/nf5.html
+++ b/app/modules/nf5.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="video">
-      <video src="Video_Modulo5.mp4" type="video/mp4" controls height="262px" width="465px"></video>
+      <video controls height="262px" width="465px"><source src="Video_Modulo5.mp4" type="video/mp4" ></video>
     </div>
   </div>
   <div class="mod-content">
