--- a/app/modules/nf5.html
+++ b/app/modules/nf5.html
@@ -37,9 +37,9 @@
         de chaves candidatas de R"
       </p>
     </div>
-    <div class="video">
-      <iframe  src="video_Modulo5.mp4" height="262px" width="465px"></iframe>
-    </div>
+    <video height="262px" width="465px" controls>
+      <source src="video_Modulo5.mp4" type="video/mp4">
+  </video>
   </div>
   <div class="mod-content">
     <h2>Dependências Multivaloradas:</h2>
