--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="img-layer">
-      <img src="../app/content/celulas-da-tabela.png" id="image-layer" />
+      <img src="celulas-da-tabela.png" id="image-layer" />
 
     </div>
   </div>
