VOLTANDO TUDO PRO COMEÇO

--- a/app/modules/nf1.html
+++ b/app/modules/nf1.html
@@ -35,8 +35,8 @@
    torna obrigatória (para consentir com a NF primária) a competência de que 
    cada valor de uma tabela deve ser indivisível ou não multivalorado, para 
    que não ocorram conflitos tanto no algoritmo do sistema que armazena os 
-   dados quanto os próprios valores que se demonstram incorretos. Desse modo, 
-   mesmo que indiretamente, a primeira NF pode melhorar o desempenho de um banco
+   dados quanto os próprios valores que se demonstram incorretos. Desse modo
+   , mesmo que indiretamente, a primeira NF melhora o desempenho de um banco
     de dados por captar informações simplificadas e menores, diminuindo a
      carga que constringe o servidor; além disso, é necessário esforço e 
      engenhosidade para concordar com a primeira forma, como nem sempre se
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="video">
-    <iframe src="Video_Modulo1.mp4" height="262px" width="465px"></iframe>
+    <video src="/app/modules/Video_Modulo1.mp4" height="262px" width="465px" controls></video>
     <!-- height="262px" width="465px"-->
     </div>
   </div>
@@ -210,9 +210,9 @@
                 </div>
         
                 <div class="question">
-                  <label>2. Tendo uma tabela (atributos: ID_Prof, Aula) com o valores - {1|Matemática Física} , Qual a correção correta dos valores para o banco de dados sem alterar a tabela original para que ela seja condizente com a NF1:</label><br>
+                  <label>2. Tendo uma tabela (atributos: ID_Prof, Aula) com o valores - {1|Matemática Física} , Qual a correção correta dos valores para o banco de dados sem alterar a tabela original:</label><br>
                   <input type="radio" id="q2a1" name="q2" value="A" required>
-                  <label for="q2a1">A) {Waffle|MetaFísica}</label><br>
+                  <label for="q2a1">A) {Waffle|Mel}</label><br>
                   <input type="radio" id="q2a2" name="q2" value="B">
                   <label for="q2a2">B) {3|Matemática|Física}</label><br>
                   <input type="radio" id="q2a3" name="q2" value="C">
