--- a/app/modules/nf2.html
+++ b/app/modules/nf2.html
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div class="video">
-      <iframe src="video_Modulo2.mp4" height="262px" width="465px">
+      <video src="/app/modules/Video_Modulo2.mp4" height="262px" width="465px" controls></video>
       </iframe>
     </div>
   </div>
