--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -39,8 +39,7 @@
 
     </div>
     <div class="video">
-      <iframe src="Video_Modulo4.mp4" height="262px" width="465px">
-      </iframe>
+      <video src="/app/modules/Video_Modulo4.mp4" height="262px" width="465px" controls></video>
     </div>
   </div>
   <div class="mod-content">
