--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section class="module-content">
         <img src="../content/ciencia-da-computacao.png" id="image1" />
-        <a class="link2" href="../app/modules/nf1.html">
+        <a class="link2" href="app/modules/nf1.html">
           <p>NF1--Garante que todos os atributos das tabelas contenham valores atômicos
             (não divisíveis) e que cada entrada da tabela seja única.</p>
         </a>
