--- a/app/about.html
+++ b/app/about.html
@@ -12,13 +12,13 @@
   <div class="navbar-layer">
     <h1>PtechLab</h1>
     <ul>
-      <a class="link" href="index.html">
-        <li>Home</li>
+      <a class="link" href="../index.html">
+        <li>Módulos</li>
       </a>
-      <a class="link" href="about.html">
+      <a class="link" href="/app/about.html">
         <li>Sobre</li>
       </a>
-      <a class="link" href="auth/login.php">
+      <a class="link" href="/app/coming-soon.html">
         <li>Entrar</li>
       </a>
     </ul>
@@ -28,10 +28,14 @@
     <div class="text-layer">
       <h1>Nosso Projeto</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis soluta, laboriosam culpa esse quae incidunt temporibus omnis officiis sapiente. Placeat eius blanditiis repudiandae iure dolorum ducimus, aperiam at doloribus mollitia!
-        Voluptate, veniam ut vel corrupti harum a quisquam nihil aspernatur rem, omnis in quis soluta, mollitia magnam repudiandae velit. Sed quas eos voluptas sapiente hic totam quia doloremque incidunt sint.
-        Repellendus ipsum tenetur modi vitae? Aut numquam quam dolor obcaecati, odit excepturi consequatur placeat iusto quo facilis eveniet ullam adipisci iure aliquid sed sit voluptate et perspiciatis assumenda dolores error.
-        Eveniet illum odit dolor repellat laboriosam explicabo alias, consectetur corporis facilis debitis repellendus ipsum et provident itaque voluptas doloribus modi vel reiciendis dolores sint fuga? Sequi saepe id alias quae?
+        O PtechLab é um agrupado de cursos voltados para diversos assuntos sobre Banco de Dados, com participação
+de 10 diversos grupos do 2ºPTECH. Criando assim uma ótima oportunidade para demonstrar habilidades em projetos 
+de grande porte e na EXCUTE. 
+Falando especificamente sobre o módulo de Normalização de Tabelas, é um assunto extremamente interessante e 
+aplicável na programação profissional, sendo simples e eficaz. 
+O ponto mais desafiador em fazer um curso, é criar os próprios exemplos, ter a criatividade de inventar e
+corrigir suas próprias questões avaliativas baseadas no conteúdo que foi aprendido. Criando um conteúdo de fácil 
+entendimento para todos os níveis de Devs.
       </p>
     </div>
     <div class="img-layer">
@@ -44,29 +48,30 @@
     <div class="about">
       <section class="odd">
         <img src="../content/augusto.jpeg" class="person" alt="">
-        <p>Augusto Conti</p>
+        <p>Augusto Conti - Front-End - QA - Módulo 5.</p>
       </section>
       <section class="even">
         <img src="../content/acho q essa aq vai servir.png" class="person" alt="">
-        <p>Eduardo Sim</p>
+        <p>Eduardo Sim - Front-End - QA - Módulo 6.</p>
+      
       </section>
       <section class="odd">
-        <img src="../content/augusto.jpeg" class="person" alt="">
-        <p>Guilherme Wendel</p>
+        <img src="../content/guilherme.jpeg" class="person" alt="">
+        <p>Guilherme Wendel - Formulário - Módulo 3.</p>
       </section>
       <section class="even">
         <img src="../content/enzo1.jpeg" class="person" alt="">
-        <p>Enzo Schiavo</p>
+        <p>Enzo Schiavo - Front-End - Módulo 1 e 4.</p>
       </section>
       <section class="odd">
         <img src="../content/giovanni.jpeg" class="person" alt="">
-        <p>Giovanni Toccoli</p>
+        <p>Giovanni Toccoli - Formulário - Módulo 2 - Editor</p>
       </section>
 
     </div>
   </div>
 
-
+      <!-- Vai se ferrar guilherme -->
   <div class="button-layer">
     <div class="button-content">
 
