--- a/app/modules/nf3.html
+++ b/app/modules/nf3.html
@@ -13,7 +13,7 @@
   <div class="navbar-layer">
     <h1>PtechLab</h1>
     <ul>
-      <a class="link" href="../index.html">
+      <a class="link" href="../../index.html">
         <li>Módulos</li>
       </a>
       <a class="link" href="../about.html">
