--- a/app/modules/nf5.html
+++ b/app/modules/nf5.html
@@ -13,13 +13,13 @@
   <div class="navbar-layer">
     <h1>PtechLab</h1>
     <ul>
-      <a class="link" href="../index.html">
+      <a class="link" href="../../index.html">
         <li>Módulos</li>
       </a>
-      <a class="link" href="../about.html">
+      <a class="link" href="/app/about.html">
         <li>Sobre</li>
       </a>
-      <a class="link" href="../auth/login.html">
+      <a class="link" href="/app/coming-soon.html">
         <li>Entrar</li>
       </a>
     </ul>
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="video">
-      <iframe  src="Video_Modulo5.mp4" height="262px" width="465px"></iframe>
+      <video src="/app/modules/Video_Modulo5.mp4" height="262px" width="465px" controls></video>
     </div>
   </div>
   <div class="mod-content">
