--- a/app/modules/nf1.html
+++ b/app/modules/nf1.html
@@ -13,13 +13,13 @@
   <div class="navbar-layer">
     <h1>PtechLab</h1>
     <ul>
-      <a class="link" href="../index.html">
+      <a class="link" href="../../index.html">
         <li>Módulos</li>
       </a>
-      <a class="link" href="../about.html">
+      <a class="link" href="/app/about.html">
         <li>Sobre</li>
       </a>
-      <a class="link" href="../auth/login.html">
+      <a class="link" href="/app/coming-soon.html">
         <li>Entrar</li>
       </a>
     </ul>
