--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <a class="link" href="index.html">
         <li>Módulos</li>
       </a>
-      <a class="link" href="../app/about.html">
+      <a class="link" href="/app/about.html">
         <li>Sobre</li>
       </a>
-      <a class="link" href="../app/coming-soon.html">
+      <a class="link" href="/app/coming-soon.html">
         <li>Entrar</li>
       </a>
     </ul>
@@ -85,35 +85,35 @@
       </section>
       <section class="module-content">
         <img src="../content/computador-portatil.png" id="image1" />
-        <a class="link2" href="../app/modules/nf2.html">
+        <a class="link2" href="app/modules/nf2.html">
           <p>NF2--Exige que a tabela esteja em NF1 e, além disso,
             que todos os atributos que não são chaves dependam totalmente da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
         <img src="../content/gerenciamento-de-informacoes.png" id="image1" />
-        <a class="link2" href="../app/modules/nf3.html">
+        <a class="link2" href="app/modules/nf3.html">
           <p>NF3--Requer que a tabela esteja em NF2 e que os atributos não-chaves sejam independentes
             uns dos outros, ou seja, sem dependências transitivas.</p>
         </a>
       </section>
       <section class="module-content">
         <img src="../content/transformacao.png" id="image1" />
-        <a class="link2" href="../app/modules/nfbc.html">
+        <a class="link2" href="app/modules/nfbc.html">
           <p>BCNF--Uma versão mais rigorosa da NF3, que resolve algumas exceções,
             garantindo que toda dependência funcional seja direta da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
         <img src="../content/tecnologia.png" id="image1" />
-        <a class="link2" href="../app/modules/nf4.html">
+        <a class="link2" href="app/modules/nf4.html">
           <p>NF4--Além das exigências da NF3, a NF4 elimina dependências multivaloradas,
             onde um atributo pode ter múltiplos valores que dependem da chave primária.</p>
         </a>
       </section>
       <section class="module-content">
         <img src="../content/tecnologia (1).png" id="image1" />
-        <a class="link2" href="../app/modules/nf5.html">
+        <a class="link2" href="app/modules/nf5.html">
           <p>NF5--Também conhecida como 5NF, elimina dependências de junção,
             assegurando que os dados sejam decompostos o máximo possível sem perda de informações.</p>
         </a>
