--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <h1>PtechLab</h1>
       <p><strong>Institucional</strong></p>
-      <a class="link" href="about.html">
+      <a class="link" href="/app/about.html">
         <p>Sobre nós</p></a>
         <a class="link" target="_blank" href="https://www.jorgestreet.com.br/">
           <p>Nossa escola</p></a>
