--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
     <div class="text-layer">
       <h1>Normalização de Tabelas</h1>
       <p>
-        A normalização de tabelas é uma técnica utilizada no design de bancos
-        de dados para organizar dados de forma eficiente e evitar
-        redundâncias. Ela envolve a divisão de uma tabela grande em tabelas
-        menores relacionadas, seguindo regras chamadas de "formas normais".
-        Com isso, o banco de dados se torna mais fácil de gerenciar, reduzindo
-        inconsistências e melhorando a integridade dos dados.
+        A normalização de tabelas é uma técnica usada 
+        para organizar dados em bancos de dados de forma eficiente, 
+        evitando redundâncias e melhorando a integridade. 
+        Ela consiste em dividir uma tabela em tabelas menores, 
+        chamadas de "formas normais", que seguem regras para garantir a 
+        consistência e reduzir duplicidades. Com a normalização, 
+        o banco de dados fica mais fácil de gerenciar e consultar, 
+        já que cada informação é armazenada em apenas um lugar, 
+        facilitando atualizações e melhorando a eficiência no armazenamento.
       </p>
     </div>
     <div class="img-layer">
