--- a/app/about.html
+++ b/app/about.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style0.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../content/logo3.png" type="image/png">
   <title>about</title>
 </head>
 
