--- a/app/modules/nfbc.html
+++ b/app/modules/nfbc.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style-modules6.css" />
   <script src="../script.js" defer></script>
   <script src="questions-nfbc.js" defer></script>
+  <link rel="icon" href="logo3.png" type="image/png">
 </head>
 
 <body>
