--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>PtechLab</title>
       <link rel="stylesheet" href="/app/style.css" />
       <script src="/app/script.js" defer></script>
+      <link rel="icon" href="../content/logo3.png" type="image/png">
 
 </head>
 
