--- a/app/coming-soon.html
+++ b/app/coming-soon.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coming Soon | PtechLab</title>
   <link rel="stylesheet" href="coming-soon.css">
+  <link rel="icon" href="../content/logo3.png" type="image/png">
 </head>
 
 <body>
