--- a/app/modules/nf1.html
+++ b/app/modules/nf1.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="style-modules1.css" />
   <script src="../script.js" defer></script>
+  <link rel="icon" href="logo3.png" type="image/png">
 </head>
 
 <body>
