--- a/app/modules/nf4.html
+++ b/app/modules/nf4.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="style-modules4.css" />
   <script src="questions-nf4.js" defer></script>
+  <link rel="icon" href="logo3.png" type="image/png">
 </head>
 
 <body>
