--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>PtechLab</title>
-      <link rel="stylesheet" href="/app/style.css" />
+      <link rel="stylesheet" href="../app/style.css" />
       <script src="/app/script.js" defer></script>
       <link rel="icon" href="../content/logo3.png" type="image/png">
 
