--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="navbar-layer">
+    <img src="../content/logo3.png" height="85px" width="110px" alt="">
     <h1>PtechLab</h1>
     <ul>
       <a class="link" href="index.html">
